# NewAndroidThreply

./: .gitignore  ANDROID_LIBRIME_BUILD_GUIDE.md  B_MODE_QUICK_START.md  B_MODE_USAGE_GUIDE.md  CLAUDE_CODE_PROMPT_LIBRIME_VALIDATION.md  KEYBOARD_DEBUG_GUIDE.md  KEYBOARD_FEATURE_COMPARISON.md  KEYBOARD_TODO_PRIORITY.md  MAIN_APP_GAP_ANALYSIS.md  PROFILE_PERSONALIZATION_TASK_TABLE.md  README.md  T14_REPLY_TREE_IMPLEMENTATION.md  TRANSLATE_FEATURE_GUIDE.md  TRANSLATE_QUICK_START.md  TRANSLATE_UI_FIX.md  TRANSLATE_UI_IMPLEMENTATION_SUMMARY.md  TRANSLATE_UI_INTEGRATION.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rime_jni.cpp
app/src/main/java/com/arche/threply/: MainActivity.kt  ThreplyApp.kt
app/src/main/java/com/arche/threply/billing/: BillingManager.kt
app/src/main/java/com/arche/threply/data/: BackendAiApi.kt  BackendAuthApi.kt  BackendSessionStore.kt  DeepSeekDirectApi.kt  PrefsManager.kt  SecureStorage.kt  ThemePreference.kt
app/src/main/java/com/arche/threply/data/profile/: ReplyHistoryStore.kt  UserProfileStore.kt
app/src/main/java/com/arche/threply/ime/: ImeSetupHelper.kt  ThreplyInputMethodService.kt
app/src/main/java/com/arche/threply/ime/ai/: AiImeCoordinator.kt
app/src/main/java/com/arche/threply/ime/compose/: BModePanel.kt  CModePanel.kt  ImeAiOverlay.kt  ImeLifecycleOwner.kt  TranslatePanel.kt
app/src/main/java/com/arche/threply/ime/context/: ChatContextHolder.kt
app/src/main/java/com/arche/threply/ime/model/: SuggestionModels.kt
app/src/main/java/com/arche/threply/ime/pinyin/: PinyinComposer.kt
app/src/main/java/com/arche/threply/ime/rime/: RIME_JNI_CONTRACT.md  RimeEngineController.kt  RimeFallbackLexicon.kt  RimeFallbackLexiconExt.kt  RimeFallbackLexiconExt1.kt  RimeFallbackLexiconExt2.kt  RimeNativeBridge.kt  RimeResourceManager.kt
app/src/main/java/com/arche/threply/ime/trigger/: SharedTriggerStore.kt
app/src/main/java/com/arche/threply/screenshot/: ChatScanAccessibilityService.kt  OcrEngine.kt  ScreenshotAiCoordinator.kt  ScreenshotContentObserver.kt  ScreenshotMonitorService.kt  ScreenshotNotificationHelper.kt
app/src/main/java/com/arche/threply/ui/components/: AppEntryAnimationOverlay.kt  GlassButton.kt  GlassCard.kt  LiquidGlassBackdrop.kt
app/src/main/java/com/arche/threply/ui/home/: CModeCard.kt  HomeScreen.kt
app/src/main/java/com/arche/threply/ui/login/: LoginScreen.kt  PhoneLoginContent.kt
app/src/main/java/com/arche/threply/ui/onboarding/: OnboardingScreen.kt
app/src/main/java/com/arche/threply/ui/paywall/: PaywallScreen.kt
app/src/main/java/com/arche/threply/ui/profile/: ProfilePersonaScreen.kt  ProfileScreen.kt
app/src/main/java/com/arche/threply/ui/theme/: Theme.kt
app/src/main/java/com/arche/threply/util/: HapticsUtil.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: chat_scan_accessibility_config.xml  threply_ime_method.xml
